--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,11 @@ body{
 }
 
 .sign{
-  background-image: url('./assets/sign.png');
+  background-image: url('./assets/logo.jpg');
   background-size: cover;
   background-position: center;
+  width: 100%;
+  height: 100%;
   position: relative;
 }
 
@@ -25,5 +27,29 @@ body{
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7); /* Qora shaffof qoplama */
+  background: rgba(0, 0, 0, 0.7);
+}
+
+
+:where(.css-dev-only-do-not-override-cdzvx5).ant-card .ant-card-body,
+.ant-modal-content{
+  padding: 0 !important;
+}
+
+.ant-modal-footer{
+  padding: 10px 20px !important;
+  text-align: center !important;
+}
+
+.ant-modal-footer button:nth-child(1){
+  display: none !important;
+}
+
+:where(.css-dev-only-do-not-override-cdzvx5).ant-form-item .ant-form-item-label >label.ant-form-item-required:not(.ant-form-item-required-mark-optional)::before{
+  display: none !important;
+}
+
+:where(.css-dev-only-do-not-override-cdzvx5).ant-form-item .ant-form-item-label >label.ant-form-item-required:not(.ant-form-item-required-mark-optional){
+  font-size: 16px;
+  font-weight: 500;
 }
